[project]
name = "on4kst-tools"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "prompt_toolkit>=3.0",
    "numpy>=1.26",
    "ruff>=0.9",
    "pyte>=0.8",
    "pillow>=10.0",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line too long — long lines are intentional in some places
    "E701",  # multiple statements on one line — compact if/return style in lookup functions
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "--cov=. --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
